# projector

./: .gitignore  .goreleaser.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: build.yml  general.yml  lint.yml  release.yml  test.yml  vuln.yml
cmd/projector/: main.go
internal/cli/: completion.go  config_cmd.go  config_cmd_test.go  context.go  list.go  picker.go  picker_test.go  project.go  root.go  run.go  run_test.go
internal/config/: dotenv.go  dotenv_test.go  file.go  loader.go  loader_test.go  types.go
internal/editor/: editor.go
internal/project/: registry.go  registry_test.go
internal/runner/: deps.go  deps_test.go  output.go  runner.go  runner_test.go
src/: config.rs  projector.rs
